feat(components): the input component is complete

--- a/packages/theme/index.scss
+++ b/packages/theme/index.scss
@@ -3,4 +3,5 @@
 @forward './icon/icon';
 @forward './switch/switch';
 @forward './input/input';
+@forward './input-number/input-number';
 @forward './form/form';
